[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main/FSM/Credits.gd" type="Script" id=1]
[ext_resource path="res://Fonts/BitmapFont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scenes/Main/FSM/CreditsProxyTarget.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "CreditsAnim"
length = 40.0
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsText:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1000 ) ]
}

[node name="Credits" type="Spatial"]
script = ExtResource( 1 )

[node name="CreditsProxyTarget" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsText" type="RichTextLabel" parent="CreditsProxyTarget"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_bottom = -100.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]












[img]Textures/Logo.png[/img]
a game by [color=#d8a0b2]Bauxitedev[/color]
made for [color=#d8a0b2]Github Game Off 2021[/color]

____


Programming & Level Design & Main Logo Design
[color=#d8a0b2]Bauxitedev[/color]



Visual Art
[color=#d8a0b2]Bauxitedev
Kenney Game Assets[/color]



Sound Effects
[color=#d8a0b2]Bauxitedev
Kenney Game Assets[/color]


Music
[color=#d8a0b2]Bauxitedev[/color]


___


Attribution:
Brain 3D model by [color=#d8a0b2]kpaulsen[/color] (CC BY 3.0)
Godot Pixel Logo based on the work by [color=#d8a0b2]herrwoland[/color] (CC0)
Keyboard icons based on the work by [color=#d8a0b2]TRBRY[/color] (CC BY 3.0)

Made with [color=#d8a0b2]Godot Engine 3.3.3[/color]
[img]Textures/GodotLogoAnim.tres[/img]

___

















Thanks for playing!

[/center]

"
text = "













a game by Bauxitedev
made for Github Game Off 2021

____


Programming & Level Design & Main Logo Design
Bauxitedev



Visual Art
Bauxitedev
Kenney Game Assets



Sound Effects
Bauxitedev
Kenney Game Assets


Music
Bauxitedev


___


Attribution:
Brain 3D model by kpaulsen (CC BY 3.0)
Godot Pixel Logo based on the work by herrwoland (CC0)
Keyboard icons based on the work by TRBRY (CC BY 3.0)

Made with Godot Engine 3.3.3


___

















Thanks for playing!



"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreditsProxyTarget"]
autoplay = "CreditsAnim"
anims/CreditsAnim = SubResource( 1 )

[node name="TransitionTimer" type="Timer" parent="CreditsProxyTarget"]
one_shot = true

[connection signal="animation_finished" from="CreditsProxyTarget/AnimationPlayer" to="CreditsProxyTarget" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="CreditsProxyTarget/TransitionTimer" to="CreditsProxyTarget" method="_on_TransitionTimer_timeout"]
